@@ -2,9 +2,10 @@ patchage (1.0.1) unstable;
 
   * Support Jack CV and OSC via metadata.
   * Configure based on compiler target OS for cross-compilation.
+  * Save window size and position when closed via window manager.
   * Fix compilation with Jack DBus.
 
- -- David Robillard <d@drobilla.net>  Wed, 19 Nov 2014 13:42:09 -0500
+ -- David Robillard <d@drobilla.net>  Sun, 08 Feb 2015 06:36:55 -0500
 
 patchage (1.0.0) stable;
 
